--- a/views/landing/landingPage.handlebars
+++ b/views/landing/landingPage.handlebars
@@ -1,1 +1,9 @@
 
+    <a href="/login" class="background-link"> <!-- Replace 'https://example.com' with the desired URL you want to redirect to -->
+        <div class="content-wrapper">
+            <!-- Your website content goes here -->
+           
+        </div>
+    </a>
+
+
