--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -2,7 +2,7 @@
     display: block;
     width: 100vw;
     height: 100vh;
-    background-image: url('../images/Wireframe\ -\ 3.png');
+    background-image: url('../images/Wireframe-3.png');
     background-size: cover;
     background-size: 75%;
     background-repeat: no-repeat;
