--- a/views/partials/signup-css.handlebars
+++ b/views/partials/signup-css.handlebars
@@ -1,1 +1,2 @@
-
+<link rel="stylesheet" href="../../public/css/signup.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" />
