--- a/views/partials/signup-script.handlebars
+++ b/views/partials/signup-script.handlebars
@@ -1,1 +1,5 @@
-
+<script>
+        document.querySelector('.img__btn').addEventListener('click', function () {
+            document.querySelector('.cont').classList.toggle('s--signup');
+        });
+</script>
