--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -29,7 +29,7 @@ h1 {
 	/* min-height: 35rem;
 	background-image: linear-gradient(to bottom,  rgba(255,168,76,0.6) 0%,rgba(255,123,13,0.6) 100%), url('https://images.unsplash.com/photo-1446824505046-e43605ffb17f');
 	background-blend-mode: soft-light; */
-	background: url("Wireframe - 3.png") fixed;
+	background: url("wireframe_landing.png") fixed;
 	background-size: cover;
 	height: 100vh;
 	/* background-position: center center;
