--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -114,7 +114,7 @@ button {
     top: 0;
     width: 100%;
     height: 100%;
-    background: #CDEBDA;
+    background: #00ccff;
 }
 
 .cont.s--signup .img:before {
@@ -171,7 +171,7 @@ button {
     height: 36px;
     margin: 0 auto;
     background: transparent;
-    background-color: #67dc80;
+    background-color: #00ccff;
     color: #fff;
     text-transform: uppercase;
     font-size: 15px;
@@ -186,7 +186,7 @@ button {
     top: 0;
     width: 100%;
     height: 100%;
-    border: 4px solid #67dc80;
+    border: 4px solid #00ccff;
     border-radius: 30px;
 }
 
@@ -262,7 +262,7 @@ input {
 .submit {
     margin-top: 40px;
     margin-bottom: 20px;
-    background: #67dc80;
+    background: #00ccff;
     text-transform: uppercase;
 }
 
