--- a/views/auth/signup.handlebars
+++ b/views/auth/signup.handlebars
@@ -18,7 +18,7 @@
               <button type="submit" class="submit btn solid">Login</button>
             </form>
             {{#if error}}
-                <div class="row alert alert-danger error-div">
+                <div class=" alert alert-danger error-div">
                   {{error}}
                 </div>
               {{/if}}
@@ -64,7 +64,7 @@
            
           </form>
           {{#if error}}
-                  <div class="row alert alert-danger error-div">
+                  <div class=" alert alert-danger error-div">
                     {{error}}
                   </div>
                 {{/if}}
