--- a/public/css/book.css
+++ b/public/css/book.css
@@ -646,7 +646,7 @@ section:nth-child(even){
   
   .dd-button:after {
 
-    padding: top 10px; ;
+    padding: top 10px;
     content: '';
     position: absolute;
     top: 50%;
