--- a/public/css/appointment_doctor.css
+++ b/public/css/appointment_doctor.css
@@ -1,32 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
-
-
-body{
-
-    border-radius: 100px;
-}
-
-*{
-    font-family: 'Poppins', sans-serif;
-    margin:0; padding: 0;
-    box-sizing: border-box;
-    outline: none; border: none;
-    text-transform: capitalize;
-    transition: all .2s ease-out;
-    text-decoration: none;
+body {
+    margin-top: 25vh;
+    min-height: 60vh;
+    min-width: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 main.table {
+    overflow: hidden;
     background-color: #200000;
-    background-image: linear-gradient(120deg, #a5cfea 50%, #be8ff1 100%);
+    background-image: linear-gradient(120deg, #ffffff 50%, #ffffff 100%);
     width: 187vw;
     height: auto;
-    
-
     backdrop-filter: blur(7px);
     box-shadow: 0 .4rem .8rem #0005;
     border-radius: .8rem;
-
     overflow: hidden;
 }
 
@@ -35,7 +24,6 @@ main.table {
     height: 10%;
     background-color: rgba(255, 255, 255, 0.567);
     padding: .8rem 1rem;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -44,7 +32,7 @@ main.table {
 .table__header .input-group {
     width: 35%;
     height: 100%;
-    background-color: rgba(234, 152, 152, 0.333);
+    background-color: rgba(199, 11, 11, 0.333);
     padding: 0 .8rem;
     border-radius: 2rem;
 
@@ -125,7 +113,7 @@ thead th {
     position: sticky;
     top: 0;
     left: 0;
-    background-color: #459bf7;
+    background-color: #75CCB6;
     cursor: pointer;
     text-transform: capitalize;
 }
@@ -218,7 +206,7 @@ thead th:hover span.icon-arrow{
 }
 
 thead th:hover {
-    color: #b7b7b7;
+    color: #ffffff;
 }
 
 thead th.active span.icon-arrow{
@@ -310,196 +298,7 @@ thead th.active,tbody td.active {
     height: auto;
 }
 
-#genderDropdown {
-    border-radius: 15px;
-    width: 100%;
-    padding: 15px;
-    font-size: 16px;
-   margin-top: 5px;
-   margin-bottom: 5px;
-}
 
-  .button:before{
-    transition: all 0.1s linear;  
-    content: attr(value);
-    display:block; 
-  }
-  .button:after {
-      transition: all 0.3s ease-in-out;  
-      content: "";
-      display: block;
-      background-color:rgb(15, 129, 228);
-      margin-top:0px;
-      height: 40px;
-  }
-  
-  .button:hover:after{
-      margin-top:-40px;
-  }
-  .button:hover{
-      color:#ffffff;
-  }
-
-  .button{
-
-    transition: all 0.3s ease-in-out;
-    display:inline-block;
-    width:100px;
-    height:40px;
-    line-height:40px;
-    border:2px solid white;
-    text-transform: capitalize;
-    border-radius:2px;
-    margin:5px;
-    position:relative;
-    overflow:hidden;
-  }
-
-  
-  
-
-  .button1{
-    color: white;
-    position: relative;
-    top: -50px;
-    left: 990px;
-    background-color: #066df4;
-    transition: all 0.3s ease-in-out;
-    display:inline-block;
-    width:auto;
-    height:40px;
-
-    padding: 10px 10px;
-  
-    border-radius:5px;
-  
-   
-    overflow:hidden;
-  }
-  
-
-  
-section{
-    border-radius: 100px;
-    padding:2rem 9%;
-}
-
-section:nth-child(even){
-    background: #ffffff;
-}
-
-.heading{
-    text-align: center;
-    padding-bottom: 2rem;
-    text-shadow: var(--text-shadow);
-    text-transform: uppercase;
-    color:var(--black);
-    font-size: 5rem;
-    letter-spacing: .4rem;
-}
-
-.heading span{
-    text-transform: uppercase;
-    color:#513eff;
-}
-
-.btn{
-    display: inline-block;
-    margin-top: 1rem;
-    padding: .5rem;
-    padding-left: 1rem;
-    border:var(--border);
-    border-radius: .5rem;
-    box-shadow: var(--box-shadow);
-    color:#513eff;
-    cursor: pointer;
-    font-size: 1.7rem;
-    background: #fff;
-}
-
-.btn span{
-    padding:.7rem 1rem;
-    border-radius: .5rem;
-    background: #513eff;
-    color:#fff;
-    margin-left: .5rem;
-}
-
-.btn:hover{
-    background-color: #8EC5FC; background-image: linear-gradient(62deg, #328ae1 10%, #808dff 100%);
-    color:#fff;
-}
-
-.btn:hover span{
-    background-color: #8EC5FC; background-image: linear-gradient(62deg, #9acafa 10%, #808dff 100%);
-    background:#fff;
-    margin-left: 1rem;
-}
-   
-
-.book .row{
-    
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap:2rem;
-}
- 
-.book .row .image{
-    flex:1 1 45rem;
-}
-
-.book .row .image img{
-    width: 100%;
-}
-
-.book .row form{
-
-    
-    flex:1 1 45rem;
-    margin: 1px;
-    background-color: #8EC5FC; background-image: linear-gradient(62deg, #9acafa 10%, #808dff 100%);
-    border:var(--border);
-    box-shadow: var(--box-shadow);
-    text-align: center;
-    padding: 2rem;
-    border-radius: 1.7rem;
-}
-
-.book .row form h3{
-    color:var(--black);
-    padding-bottom: 1rem;
-    font-size: 3rem;
-}
-
-.book .row form .box{
-    align-items: center;
-    width: 100%;
-    margin:.8rem 0;
-    border-radius: 1.5rem;
-    border:var(--border);
-    font-size: 1.6rem;
-    color: var(--black);
-    text-transform: none;
-    padding: 1.7rem;
-}
-
-.book .row form .btn{
-    padding:1rem 4rem;
-}
-
-
-
-  
-  a {
-    text-decoration: none;
-    color: #000000;
-  }
-  
-  a:hover {
-    color: #222222
-  }
-  
   .button:before{
     transition: all 0.1s linear;  
     content: attr(value);
@@ -522,11 +321,12 @@ section:nth-child(even){
   }
 
   .button2{
+    font-size: medium;
     font-weight: bold;
 
     transition: all 0.3s ease-in-out;
     display:inline-block;
-    width:100px;
+    width:120px;
     height:40px;
     line-height:40px;
     border:2px solid white;
@@ -562,10 +362,10 @@ section:nth-child(even){
 
   .button{
     font-weight: bold;
-
+font-size: medium;
     transition: all 0.3s ease-in-out;
     display:inline-block;
-    width:100px;
+    width:150px;
     height:40px;
     line-height:40px;
     border:2px solid white;
@@ -580,6 +380,8 @@ section:nth-child(even){
  
  
   .button1{
+    font-size: medium;
+    font-size: large;
     background-color: #ff747485;
     color: white;
     transition: all 0.3s ease-in-out;
@@ -619,6 +421,7 @@ section:nth-child(even){
   }
   
   .dd-button {
+    font-size: medium;
     border-radius: 30px;
     font-weight: bold;
     color: white;
@@ -630,7 +433,7 @@ section:nth-child(even){
     border: 1px solid gray;
     border-radius: 4px;
     padding: 10px 30px 10px 20px;
-    background-color: #88afff;
+    background-color: #75CCB6;
     cursor: pointer;
     white-space: nowrap;
   }
@@ -711,8 +514,9 @@ section:nth-child(even){
     padding: 0;
     border-bottom: 1px solid #cccccc;
   }
-    /* other drop down*//* Default styles for larger screens */
-.dropdown1 {
+    /* other drop down*/
+    
+  .dropdown1 {
     display: inline-block;
     position: relative;
   }
@@ -721,13 +525,14 @@ section:nth-child(even){
     color: white;
     font-weight: bold;
     text-align: center;
+    
     padding-left: 5px;
     width: 1369px;
     display: inline-block;
     border: 1px solid gray;
     border-radius: 4px;
     padding: 10px 30px 10px 20px;
-    background-color: #7cbfff;
+    background-color: #75CCB6;
     cursor: pointer;
     white-space: nowrap;
   }
@@ -738,8 +543,8 @@ section:nth-child(even){
     top: 50%;
     right: 15px;
     transform: translateY(-50%);
-    width: 0;
-    height: 0;
+    width: 0; 
+    height: 0; 
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
     border-top: 5px solid black;
@@ -750,64 +555,53 @@ section:nth-child(even){
     background-color: #eeeeee;
   }
   
+  
   .dd-input {
     display: none;
   }
-  
   .dd-menu1 {
     text-align: center;
-    width: 1369px;
-    position: absolute;
-    top: 100%;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 0;
-    margin: 2px 0 0 0;
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
-    list-style-type: none;
-    /* Set max-width to prevent content from becoming too wide */
-    max-width: 100%;
-  }
   
-  .dd-input + .dd-menu1 {
+ width: 1369px; 
+ position: absolute;
+ top: 100%;
+ border: 1px solid #ccc;
+ border-radius: 4px;
+ padding: 0;
+ margin: 2px 0 0 0;
+ box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1);
+ background-color: #ffffff;
+ list-style-type: none;
+ /* Set max-width to prevent content from becoming too wide */
+ max-width: 100%;
+}
+
+.dd-input + .dd-menu1 {
     text-align: center;
-    display: none;
-  }
-  
-  .dd-input:checked + .dd-menu1 {
-    display: block;
-  }
-  
-  .dd-menu1 li {
-    padding: 10px 20px;
-    cursor: pointer;
-    white-space: nowrap;
-  }
-  
-  .dd-menu1 li:hover {
-    background-color: #f6f6f6;
-  }
-  
-  .dd-menu1 li a {
-    display: block;
-    margin: -10px -20px;
-    padding: 10px 20px;
-  }
-  
-  .dd-menu1 li.divider {
-    padding: 0;
-    border-bottom: 1px solid #cccccc;
-  }
-  
-  /* Responsive styles */
-  @media screen and (max-width: 768px) {
-    .dd-button1 {
-      width: calc(100% + 50%);
-    }
-  
-    .dd-menu1 {
-      width: calc(100% + 50%);
-    }
-  }
-  
+ display: none;
+} 
+
+.dd-input:checked + .dd-menu1 {
+ display: block;
+} 
+
+.dd-menu1 li {
+ padding: 10px 20px;
+ cursor: pointer;
+ white-space: nowrap;
+}
+
+.dd-menu1 li:hover {
+ background-color: #f6f6f6;
+}
+
+.dd-menu1 li a {
+ display: block;
+ margin: -10px -20px;
+ padding: 10px 20px;
+}
+
+.dd-menu1 li.divider{
+ padding: 0;
+ border-bottom: 1px solid #cccccc;
+}
