--- a/views/blog/Decoding_Health.handlebars
+++ b/views/blog/Decoding_Health.handlebars
@@ -17,7 +17,7 @@
                         </li>
                        
                         <li class = "nav-item">
-                            <a href = "service" class = "nav-link">Service</a>
+                            <a href = "/service" class = "nav-link">Service</a>
                         </li>
                         <li class = "nav-item">
                             <a href = "/feedbacks" class = "nav-link">Feedback</a>
@@ -54,34 +54,34 @@
     <!-- Some content to fill up the page -->
     <div class="content">
         <br><br><br><br>
-      <h1>Food Poisoning: Understanding, Treating and Preventing It</h1>
+      <h1>Decoding Health: How Often Should You Get Blood Work Done?</h1>
       <br>
-      <h3>Food poisoning is a common, yet often misunderstood health concern.
+      <h3>Routine blood tests, like Complete Blood Count (CBC) and Basic Metabolic Panel (BMP), give vital insights into your overall health. Early signs of diseases or conditions can be detected by CBC tests, which are a standard part of routine check-ups.</h3> <br> <br>
+      <p> Ever thought about what’s coursing through your veins? Not just blood, but a narrative. A tale of health and vitality…or sometimes the opposite.
+        <br><br>
+        Your bloodstream holds clues to mysteries that could be critical for your well-being. But how often should you unlock these secrets with a blood test?
+        <br><br>
+        Annual checkups are commonplace, sure. But is that enough? Or perhaps it’s overkill?
+        <br><br>
+        Does living with conditions like hypertension or diabetes change the game entirely? What if you were told there were more convenient ways to get lab work done outside traditional settings?
+        <br><br>
+        We’re going on an exploration into our own biology in this post, decoding truths hidden within tiny droplets of crimson life force.
+        <br><br>
+        It’s all about knowing when it’s the right time to get a routine blood test, and understanding why they’re important. Being informed gives us the capacity to take wiser steps for our health. <br>
 
-        This illness can strike anyone who consumes contaminated food or drink.</h3> <br> <br>
-      <p> This dizzying condition, characterized by a spinning sensation and loss of balance, may indeed be linked to inadequate hydration levels in the body.
-
-        The importance of our body’s water balance in sustaining equilibrium is evident when examining this issue further. Without sufficient hydration, vital functions such as blood flow and pressure regulation can falter leading to symptoms like vertigo.
-        
-        Understanding how dehydration triggers these episodes is essential for both prevention and management. Remember – vertigo could well be signaling your need for more fluids!</p>
-    <br>
-
-    <h3>Detecting Symptoms: The First Step in Dealing with Food Poisoning</h3>
+    <h3>The Importance of Basic Metabolic Panel (BMP) Tests</h3>
     <br><br>
 The initial symptoms of food poisoning typically appear within a few hours after consuming contaminated substances. Symptoms such as queasiness, which can progress to throwing up as the body attempts to eliminate hazardous toxins, may be experienced.
 <br><br>
-1. Nausea and possible progression to vomiting due to the body’s efforts to expel toxins
-<br><br>
-2. Painful abdominal cramps resulting from inflammation in the stomach or intestines
-<br><br>
-3. Diarrhea, which helps flush out toxins but can lead to dehydration if not managed properly
-<br><br>
-4. Fever, indicating an immune system response to bacterial or viral infections caused by tainted foods
-<br><br>
-5. Being aware of these potential signs can help you recognize when medical attention may be necessary.
-<br><br>
+1.A BMP test is another commonly conducted blood test during routine check-ups. It examines elements like sodium levels, glucose content, and electrolytes concentration within the body – providing valuable insight into the state and functioning of muscles, heart, organs, and bones.
 
 
+<br><br>
+2. If there are discrepancies in these areas, it can suggest illnesses such as diabetes or kidney illness. Having this knowledge allows for timely intervention and management of the condition.
+<br><br>
+So when you think about it, routine blood work is like a health surveillance system – working round-the-clock to make sure your body’s key systems are running smoothly. It’s an essential tool that helps maintain our well-being – even when we’re feeling fine.
+
+<br><br>
 
 <h3>Understanding, Treating, and Preventing Food Poisoning</h3>
 <br>
